# radar-migrate

./: .copier-answers.yml  .gitignore  README.md  pyproject.toml
conf/: config.yaml
conf/radar/: base.yaml
src/radar_migrate/: export.py  main.py
